Style: atualização página de login dia 30/01/2025 as 16:25

--- a/login.html
+++ b/login.html
@@ -15,22 +15,25 @@
 
 <body>
     <div class="conteudo-principal">
-        <img src="img/4.png" alt="logo do sistema" class="logo-do-sistema">
         <div class="card-botao">
+            <img src="img/senac_logo_branco.png" alt="Logo do Senac" class="logo-do-senac">
             <main class="conteudo">
-                <img src="img/senac-logo.png" class="logoSenac">
-                <p class="boasVindas">Seja bem-vindo.</p>
-                <h1 class="titulo">NOTEHUB</h1>
+                <p class="boasVindas">SEJA BEM-VINDO</p>
                 <div class="bloco-login">
                     <img class="card" src="./img/card.png" alt="card">
                     <h2 class="subtitulo">Faça seu login</h2>
                 </div>
                 <div>
                     <input class="matricula" type="text" id="username" name="username"
-                        placeholder="Insira sua matrícula" />
+                        placeholder="Insira sua matrícula"/>
                 </div>
+                <div>
+                    <input class="senha" type="text" id="senha" name="senha"
+                        placeholder="Digite sua senha"/>
+                </div>
+                <input class="botao-acessar" type="submit" value="Acessar" />
             </main>
-            <input class="botao-acessar" type="submit" value="Acessar" />
+            
         </div>
     </div>
 </body>
