updates de dimensões do card e jogando o lixo fora

--- a/painelR.html
+++ b/painelR.html
@@ -40,9 +40,6 @@
 
   <div id="divgradientHome"></div>
 
-  <main class="containerhome">
-    <div id="mainesquerda">
-      <div class="top-section">
 
         <section class="container">
           <!-- Reservas ocupadas -->
@@ -61,8 +58,8 @@
               </div>
               <div class="infosreserva">
                 <div class="data-hora">
-                  <p class="textreserva">Data <br> <b style="font-size: 8px;">dd/mm/yy</b></p>
-                  <p class="textreserva">Horário <br> <b style="font-size: 8px;">08:00</b></p>
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>08:00</b></p>
                 </div>
 
                 <p class="textreserva" id="notereserv">Notebook reservados</p>
@@ -70,7 +67,7 @@
 
               <div id="scrollreservas">
                 <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
-                 pppppppppppppppppppppppppppppppppppppppppppppppppppppp
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
               </div>
 
               <div class="buttons">
@@ -83,26 +80,13 @@
               </div>
             </div>
 
-            <div class="cardSeparator">
-            </div>
+            <!-- <div class="cardSeparator">
+            </div> -->
           </div>
 
 
-
-          <!-- Reservas disponíveis -->
-          <!-- <div class="card">Reserva disponível</div>
-          <div class="card">Reserva disponível</div>
-          <div class="card">Reserva disponível</div>
-          <div class="card">Reserva disponível</div>
-          <div class="card">Reserva disponível</div> -->
         </section>
-      </div>
     </div>
-
-    <div id="maindireita">
-      <!-- Conteúdo adicional -->
-    </div>
-  </main>
 
   <footer id="Footerhistory">
     <figure>
