--- a/painelR.html
+++ b/painelR.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav class="menu">
+    <div class="menu">
 
       <ul class="paginasmenu">
         <a href="#">
@@ -54,11 +54,13 @@
 
 
 
-    </nav>
+    </div>
   </header>
 
   <div id="divgradientHome"></div>
 
+
+  <nav>
     <section id="tituloPainel">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"  width="105" height="80" fill="#454545"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zm88 64l0 64-88 0 0-64 88 0zm56 0l88 0 0 64-88 0 0-64zm240 0l0 64-88 0 0-64 88 0zM64 224l88 0 0 64-88 0 0-64zm232 0l0 64-88 0 0-64 88 0zm64 0l88 0 0 64-88 0 0-64zM152 352l0 64-88 0 0-64 88 0zm56 0l88 0 0 64-88 0 0-64zm240 0l0 64-88 0 0-64 88 0z"/></svg>
       PAINEL DE RESERVAS
@@ -109,7 +111,203 @@
             </div> -->
           </div>
 
+          <div class="cardSeparator">
+
+            <div class="leftCard">
+            </div>
+            <div class="bodyCard">
+              <div class="colaborador">
+                <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#454545" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                </figure>
+                <div><strong><u>JEDSON DA SILVA</u></strong></div>
+              </div>
+              <div class="infosreserva">
+                <div class="data-hora">
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>xx:xx</b></p>
+                </div>
+
+                <p class="textreserva" id="notereserv">Notebook reservados</p>
+              </div>
+
+              <div id="scrollreservas">
+                <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+              </div>
+
+              <div class="buttons">
+                <button id="cancel">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+                  Cancelar</button>
+                <button id="finish">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  Finalizar</button>
+              </div>
+            </div>
+
+            <!-- <div class="cardSeparator">
+            </div> -->
+          </div>
+
+          <div class="cardSeparator">
+
+            <div class="leftCard">
+            </div>
+            <div class="bodyCard">
+              <div class="colaborador">
+                <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#454545" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                </figure>
+                <div><strong><u>JEDSON DA SILVA</u></strong></div>
+              </div>
+              <div class="infosreserva">
+                <div class="data-hora">
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>xx:xx</b></p>
+                </div>
+
+                <p class="textreserva" id="notereserv">Notebook reservados</p>
+              </div>
+
+              <div id="scrollreservas">
+                <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+              </div>
+
+              <div class="buttons">
+                <button id="cancel">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+                  Cancelar</button>
+                <button id="finish">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  Finalizar</button>
+              </div>
+            </div>
+
+            <!-- <div class="cardSeparator">
+            </div> -->
+          </div>
+
+          <div class="cardSeparator">
+
+            <div class="leftCard">
+            </div>
+            <div class="bodyCard">
+              <div class="colaborador">
+                <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#454545" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                </figure>
+                <div><strong><u>JEDSON DA SILVA</u></strong></div>
+              </div>
+              <div class="infosreserva">
+                <div class="data-hora">
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>xx:xx</b></p>
+                </div>
+
+                <p class="textreserva" id="notereserv">Notebook reservados</p>
+              </div>
+
+              <div id="scrollreservas">
+                <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+              </div>
+
+              <div class="buttons">
+                <button id="cancel">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+                  Cancelar</button>
+                <button id="finish">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  Finalizar</button>
+              </div>
+            </div>
+
+            <!-- <div class="cardSeparator">
+            </div> -->
+          </div>
+
+          <div class="cardSeparator">
+
+            <div class="leftCard">
+            </div>
+            <div class="bodyCard">
+              <div class="colaborador">
+                <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#454545" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                </figure>
+                <div><strong><u>JEDSON DA SILVA</u></strong></div>
+              </div>
+              <div class="infosreserva">
+                <div class="data-hora">
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>xx:xx</b></p>
+                </div>
+
+                <p class="textreserva" id="notereserv">Notebook reservados</p>
+              </div>
+
+              <div id="scrollreservas">
+                <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+              </div>
+
+              <div class="buttons">
+                <button id="cancel">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+                  Cancelar</button>
+                <button id="finish">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  Finalizar</button>
+              </div>
+            </div>
+
+            <!-- <div class="cardSeparator">
+            </div> -->
+          </div>
+
+          <div class="cardSeparator">
+
+            <div class="leftCard">
+            </div>
+            <div class="bodyCard">
+              <div class="colaborador">
+                <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#454545" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                </figure>
+                <div><strong><u>JEDSON DA SILVA</u></strong></div>
+              </div>
+              <div class="infosreserva">
+                <div class="data-hora">
+                  <p class="textreserva">Data <br> <b>dd/mm/yy</b></p>
+                  <p class="textreserva">Horário <br> <b>xx:xx</b></p>
+                </div>
+
+                <p class="textreserva" id="notereserv">Notebook reservados</p>
+              </div>
+
+              <div id="scrollreservas">
+                <!-- aqui irão aparecer as reservas feitas (sendo puxadas do database) -->
+                 suicidooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+              </div>
+
+              <div class="buttons">
+                <button id="cancel">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+                  Cancelar</button>
+                <button id="finish">
+                  <svg class="buttonicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  Finalizar</button>
+              </div>
+            </div>
+
+            <!-- <div class="cardSeparator">
+            </div> -->
+          </div>
+
         </main>
+  </nav>
 
   <footer id="Footerhistory">
     <figure>
