--- a/suporte.html
+++ b/suporte.html
@@ -89,15 +89,15 @@
                         <div id="container-1">
                             <div id="img-pc"></div>
                             <div id="ccontainer-inventario">
-                                <label class="label-suporte" for=" inventario">Matrícula do colaborador:</label>
+                                <label class="label-suporte" for=" inventario">Inventário:</label>
                                 <input class="input-suporte" type="text" name="inventario"
                                     placeholder="Digite o número de identificação do notebook">
                             </div>
                         </div>
 
 
-                        <label class="label-suporte" for=" matricula">Matrícula do colaborador:</label>
-                        <input class="input-suporte" type="text" name="matricula" placeholder="Digite sua matrícula"
+                        <label class="label-suporte" for=" sintese">Sintetise sua solicitação:</label>
+                        <input class="input-suporte" type="text" name="sintese" placeholder="Ex: notebook não liga"
                             required>
 
                         <label class="label-suporte" for="tipo-solicitacao">Tipo de solicitação:</label>
@@ -108,8 +108,8 @@
                             <option value="other">Melhoria</option>
                         </select>
 
-                        <label class="label-suporte" for="tipo-problema">Tipo de solicitação:</label>
-                        <select class="select-suporte" id="tipo-problema" name="tipo-problema" required>
+                        <label class="label-suporte" for="tipo-problema">Sub-serviço:</label>
+                        <select class="select-suporte" id="subservico" name="subservico" required>
                             <option value="">Selecione</option>
                             <option value="male">Não liga</option>
                             <option value="female">Lentidão</option>
