--- a/painelR.html
+++ b/painelR.html
@@ -17,7 +17,7 @@
     <div class="menu">
 
       <ul class="paginasmenu">
-        <a href="#">
+        <a href="home.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="35" height="30" fill="white">
             <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
             <path
