--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
             PAINEL
           </li>
         </a>
-        <a href="#">
+        <a href="historico.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="35" height="30"
             fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
             <path
