--- a/home.html
+++ b/home.html
@@ -93,13 +93,13 @@
         </figure>
         <div class="info">
           <div id="nome-matricula">
-            <label for="">Colaborador:</label>
+            <label for=""></label>
             <p id="nome"></p>
           </div>
           <HR style="height: 100%;">
           </HR>
           <div id="nome-matricula">
-            <label for="">Matricula:</label>
+            <label for=""></label>
             <p id="matricula"></p>
           </div>
           <HR style="height: 100%;">
@@ -113,17 +113,7 @@
         </div>
         <div class="formInputHome1">
           <label for="">Turma:</label>
-          <select name="turma" id="turma">
-            <option value="" disabled selected hidden>Escolha a Turma</option>
-            <optgroup label="Apredizagem"></optgroup>
-            <option value="012A">012A</option>
-            <option value="013B">013C</option>
-            <option value="018C">018B</option>
-            <optgroup label="Cursos Livres"></optgroup>
-            <option value="031Excel">012-Excel</option>
-            <option value="065Cuidado-de-idoso">065-Cuidado de Idoso</option>
-            <option value="021Operador-de-computador">021-Operador de Computador</option>
-          </select>
+          <input type="text" id="turma">
         </div>
       </div>
       <div class="bottom-section1">
