--- a/suporte.html
+++ b/suporte.html
@@ -53,13 +53,23 @@
                 </nav>
             </div>
         </div>
+
+
+        <input id="checkbox" type="checkbox">
+        <label class="toggle" for="checkbox">
+            <div id="bar1" class="bars"></div>
+            <div id="bar2" class="bars"></div>
+            <div id="bar3" class="bars"></div>
+        </label>
+
+        
     </header>
 
     <div id="divgradientHome"></div>
 
     <main>
         <section id="pagina-suporte">
-            <div class="container-totulo">
+            <div class="container-titulo">
                 <div class="container-icone">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="110" height="110"
                         fill="#454545">
