Ajustes pagina reservar

--- a/suporte.html
+++ b/suporte.html
@@ -140,7 +140,7 @@
                             placeholder="Escreva sua mensagem"></textarea>
 
                         <div id="container-btn-enviar">
-                            <button id="btn-enviar" type="submit">Enviar</button>
+                            <button class="btn" type="submit">Enviar</button>
                         </div>
                     </form>
                 </div>
