pagina pagina notebook adicionada

--- a/historico.html
+++ b/historico.html
@@ -70,6 +70,9 @@
       <button id="btn-proximo">&gt;</button>
     </div>
 
+    <div>
+
+   
     <table id="reservas-table">
       <thead>
         <tr class="header">
@@ -81,12 +84,19 @@
           <th>Excluir</th>
         </tr>
       </thead>
-      <tbody id="reservas-body">
+      <tbody  id="reservas-body">
         <!-- As linhas serão adicionadas aqui dinamicamente -->
       </tbody>
     </table>
+  </div>
+
+  <div class="DivButton">
+    <button class="buttonInferior">Deletar Histórico Mensal</button>
+    <button class="buttonInferior">Gerar PDF Mensal</button>
+  </div>
   </main>
 
+  
   <footer id="Footerhistory">
     <figure>
       <img id="logoFooterhistory" src="/image/images-removebg-preview.png" alt="Logo Senac">
