updates no header/footer 15/02

--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="../styles/login.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,7 +17,7 @@
 <body>
     <div class="conteudo-principal">
         <div class="card-botao">
-            <img src="img/senac_logo_branco.png" alt="Logo do Senac" class="logo-do-senac">
+            <img src="./img/senac_logo_branco.png" alt="Logo do Senac" class="logo-do-senac">
             <main class="conteudo">
                 <p class="boasVindas">SEJA BEM-VINDO</p>
                 <div class="bloco-login">
