adição de uma tela de loading

--- a/painelR.html
+++ b/painelR.html
@@ -81,6 +81,13 @@
 
   <div id="divgradientHome"></div>
 
+  <div id="loading-overlay" style="display: none;">
+    <div id="loading-spinner">
+      <div class="spinner"></div>
+      <p>Carregando...</p>
+    </div>
+  </div>
+
   <nav id="titulo">
     <section id="tituloPainel">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="105" height="80" fill="#454545">
@@ -89,12 +96,18 @@
       </svg>
       PAINEL DE RESERVAS
     </section>
-
   </nav>
-  
-  <main id="container">
 
-  </main>
+  
+
+  <div id="centralizacao">
+    
+    <main id="container">
+      <!-- aqui irao aparecer as reservas -->
+    </main>
+
+  </div>
+  
 
   <footer id="rodape">
     <figure>
