--- a/notebook.html
+++ b/notebook.html
@@ -78,6 +78,13 @@
 
     <div id="divgradientHome"></div>
 
+    <div id="loading-overlay" style="display: none;">
+        <div id="loading-spinner">
+          <div class="spinner"></div>
+          <p>Carregando...</p>
+        </div>
+      </div>
+
     <main>
 
         <section class="container-titulo">
