updates no header/footer 16/02

--- a/home.html
+++ b/home.html
@@ -193,7 +193,7 @@
 
   <!-- <script src="script.js"></script> -->
 
-  <script type="module" src="./firebase/firestoreHome.js"></script>
+  <script defer type="module" src="./firebase/firestoreHome.js"></script>
 
 </body>
 
