--- a/notebook.html
+++ b/notebook.html
@@ -143,7 +143,7 @@
       </footer>
 
 
-    <script type="module" src="./firebase/firestoreNotebook.js"></script>
+    <script defer type="module" src="./firebase/firestoreNotebook.js"></script>
 </body>
 
 </html>
