melhoria nos alerts

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                 <div>
                     <input class="senha" type="password" id="senha" name="senha" placeholder="Digite sua senha"/>
                 </div>
-                <input id="loginButton" class="botao-acessar" type="submit" value="acessar" />
+                <input id="loginButton" class="botao-acessar" type="submit" value="ACESSAR" />
             </main>
         </div>
     </div>
