responsividade completa na home

--- a/notebook.html
+++ b/notebook.html
@@ -117,9 +117,10 @@
                 <table>
                     <thead>
                         <tr class="header">
-                            <th>Numero de Inventario</th>
+                            <th>Nº inventario</th>
                             <th>Status</th>
-                            <th>Ações</th>
+                            <th>Editar</th>
+                            <th>Excluir</th>
                         </tr>
                     </thead>
                     <tbody id="reservas-body">
