--- a/homes.html
+++ b/homes.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reserva de Notebooks</title>
-  <link rel="stylesheet" href="./styles/homesss.css">
+  <link rel="stylesheet" href="./styles/home.css">
+  <link rel="stylesheet" href="./responsividade.css">
+  <link rel="stylesheet" href="./styles/suporte.css">
+  <link rel="stylesheet" href="./styles/header-footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
@@ -15,8 +18,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./responsividade.css">
-  <link rel="stylesheet" href="./suporte.css">
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -32,26 +33,26 @@
 
     <div class="container-header">
       <div class="logo">
-        <img src="./src/assets/image/senac_logo_branco.png" alt="Logo Senac">
+        <img src="./img/senac_logo_branco.png" alt="">
       </div>
       <div class="container-menu">
         <nav class="menu">
           <ul>
-            <a href="#">
+            <a href="home.html">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30" fill="white">
                 <path
                   d="M128 0c17.7 0 32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 48 0c26.5 0 48 21.5 48 48l0 48L0 160l0-48C0 85.5 21.5 64 48 64l48 0 0-32c0-17.7 14.3-32 32-32zM0 192l448 0 0 272c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 192zm64 80l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm128 0l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zM64 400l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16z" />
               </svg>
               <li>RESERVAR</li>
             </a>
-            <a href="#">
+            <a href="painelR.html">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30" fill="white">
                 <path
                   d="M384 96l0 128-128 0 0-128 128 0zm0 192l0 128-128 0 0-128 128 0zM192 224L64 224 64 96l128 0 0 128zM64 288l128 0 0 128L64 416l0-128zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32z" />
               </svg>
               <li>PAINEL</li>
             </a>
-            <a href="#">
+            <a href="historico.html">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30" fill="white">
                 <path
                   d="M96 0C43 0 0 43 0 96L0 416c0 53 43 96 96 96l288 0 32 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l0-64c17.7 0 32-14.3 32-32l0-320c0-17.7-14.3-32-32-32L384 0 96 0zm0 384l256 0 0 64L96 448c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16zm16 48l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
@@ -65,9 +66,8 @@
               </svg>
               <li>SUPORTE</li>
             </a>
-            <a href="#">
-
-              <svg id="svg-laptop" xmlns="http://www.w3.org/2000/svg" height="20" width="25" viewBox="0 0 640 512"
+            <a id="notebook-link" href="notebook.html" style="display: flex;">
+              <svg id="svg-laptop" xmlns="http://www.w3.org/2000/svg" height="30" width="35" viewBox="0 0 640 512"
                 width="50" height="50"
                 fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
@@ -81,8 +81,17 @@
     </div>
   </header>
 
+  
+
   <div id="divgradientHome"></div>
 
+
+  <div id="loading-overlay" style="display: none;">
+    <div id="loading-spinner">
+      <div class="spinner"></div>
+      <p>Carregando...</p>
+    </div>
+  </div>
 
   <main>
     <div class="container-titulo">
@@ -97,9 +106,6 @@
         <H1 class="titulo">FAÇA SUA RESERVA</H1>
       </div>
     </div>
-
-
-    <p id="status"></p>
 
     <div id="container-reserva">
       <div id="mainesquerda">
@@ -154,7 +160,7 @@
 
         <div class="formInputHome1">
           <label class="label-suporte" for="Quantidade">Quantidade:</label>
-          <p class="input-suporte" id="quantidade"> 0</p>
+          <p id="quantidade"> 0</p>
           <!-- <input class="input-suporte" type="text" id="quantidade" readonly> -->
         </div>
 
@@ -188,12 +194,13 @@
   </main>
 
 
-  <footer id="rodape">
+<footer id="rodape">
     <figure>
-      <img id="logorodapeHome" src="./src/assets/image/" alt="Logo do SENAC">
+      <img id="logorodapeHome" src="./image/images-removebg-preview.png" alt="logo do senac">
     </figure>
     <h2>Senac Unidade Zona Norte</h2>
   </footer>
+
 
   <!-- <script src="script.js"></script> -->
 
