--- a/painelR.html
+++ b/painelR.html
@@ -111,7 +111,7 @@
 
   <footer id="rodape">
     <figure>
-      <img id="logorodapeHome" src="./image/images-removebg-preview.png" alt="">
+      <img id="logorodapeHome" src="./img/senac_logo_branco.png" alt="">
     </figure>
     <h2>Senac Unidade Zona Norte</h2>
   </footer>
