--- a/suporte.html
+++ b/suporte.html
@@ -24,7 +24,7 @@
             <div class="container-menu">
                 <nav class="menu">
                     <ul>
-                        <a href="#">
+                        <a href="home.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
                                 fill="white">
                                 <path
@@ -32,7 +32,7 @@
                             </svg>
                             <li>RESERVAR</li>
                         </a>
-                        <a href="#">
+                        <a href="painelR.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
                                 fill="white">
                                 <path
@@ -40,7 +40,7 @@
                             </svg>
                             <li>PAINEL</li>
                         </a>
-                        <a href="#">
+                        <a href="historico.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
                                 fill="white">
                                 <path
@@ -48,7 +48,7 @@
                             </svg>
                             <li>HISTÓRICO</li>
                         </a>
-                        <a href="#">
+                        <a href="suporte.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="30" height="30"
                                 fill="white">
                                 <path
