--- a/notebook.html
+++ b/notebook.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notebook</title>
-    <link rel="stylesheet" href="../styles/notebook.css">
-    <link rel="stylesheet" href="../styles/header-footer.css">
+    <link rel="stylesheet" href="./styles/notebook.css">
+    <link rel="stylesheet" href="./styles/header-footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
